# codescope

./: .codescope.toml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  index.html  moar-stuff.md  package-lock.json  package.json  search.html  semantic-code-retrieval-models.md  setup.html  vite.config.ts  vite.setup.config.ts
.githooks/: post-rewrite
.github/actions/setup-codescope/: action.yml
.github/scripts/: ai-docs-sync.mjs  ai-release.mjs  ai-version-bump.mjs  e2e-agent-test.mjs
.github/scripts/lib/: agent.mjs  docs.mjs  git.mjs  output.mjs  version.mjs
.github/workflows/: build.yml  channel-release.yml  ci.yml  dev.yml  e2e.yml  edge.yml  integration.yml  release.yml
apps/desktop/: Cargo.toml  Dioxus.toml
apps/desktop/assets/styles/: app.css
apps/desktop/src/: app.rs  main.rs  state.rs
apps/desktop/src/components/: badges.rs  icons.rs  mod.rs
apps/desktop/src/editor/: highlight.rs  mod.rs  viewer.rs
apps/desktop/src/search/: filters.rs  metadata_strip.rs  mod.rs  search_input.rs
apps/desktop/src/sidebar/: activity_bar.rs  file_tree.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: budget.rs  git.rs  init.rs  lib.rs  scan.rs  semantic.rs  stubs.rs  types.rs
crates/http/: Cargo.toml
crates/http/src/: api.rs  lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: auth.rs  http.rs  lib.rs
scripts/: with-msvc.cmd
server/: Cargo.toml  Dockerfile  build.rs  codescope-init  codescope-web  setup.ps1  setup.sh
server/src/: api.rs  ast.rs  auth.rs  budget.rs  conventions.rs  fuzzy.rs  git.rs  graph.rs  init.rs  lib.rs  main.rs  mcp.rs  mcp_http.rs  scan.rs  semantic.rs  stubs.rs  tokenizer.rs  types.rs  watch.rs
server/tests/: mcp_tools.rs
server/tests/fixtures/basic/: Cargo.toml  package.json
server/tests/fixtures/basic/src/: app.ts  lib.rs  main.rs  types.rs  utils.ts
server/tests/helpers/: fixtures.rs  mod.rs
src/: ActivityBar.tsx  App.tsx  ContextPanel.tsx  FileList.tsx  FilePreview.tsx  SearchPalette.tsx  SearchSidebar.tsx  SidebarPanel.tsx  StatsDashboard.tsx  TreeSidebar.tsx  colors.ts  copyLogic.ts  icons.tsx  main.tsx  scanner.ts  search-utils.tsx  selectionActions.ts  syntax.ts  tokenCount.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: MatchTypeBadge.tsx
src/depgraph/: DependencyGraph.tsx  InspectPanel.tsx  MultiInspectPanel.tsx  analysis.ts  constants.ts  edgeRenderer.ts  highlights.ts  interaction.ts  nebulaEffects.ts  nodeRenderer.ts  sceneSetup.ts  simulation.ts  types.ts
src/hooks/: useBreakpoint.ts  useCollections.ts  useDataFetch.ts  useFileContent.ts  useLayoutMode.ts  usePreviewResize.ts  useSearch.ts  useSidebarResize.ts
src/search/: SearchWindow.tsx  cmLanguages.ts  cmTheme.ts  main.tsx  search-window.css  useCodeMirrorLang.ts
src/search/components/: CodePreview.tsx  IndexOverview.tsx  MetadataStrip.tsx  ResultsList.tsx  SearchInput.tsx  ShortcutsBar.tsx
src/setup/: SetupWizard.tsx  main.tsx  setup.css
src/setup/screens/: DoctorScreen.tsx  DoneScreen.tsx  GpuScreen.tsx  IntegrationScreen.tsx  RepoPickerScreen.tsx  SemanticScreen.tsx  WelcomeScreen.tsx
src/shared/: api.ts
src/styles/: activity-bar.css  codemap.css  context-panel.css  crt.css  depgraph.css  filelist.css  layout.css  palette.css  preview.css  sidebar.css  stats.css  variables.css
src/treemap/: CodebaseMap.tsx  buildTreemapData.ts  colorUtils.ts  layout.ts  render.ts  types.ts  useViewport.ts
tests/: integration.sh  mcp-transport.sh  validate.mjs
