[package]
name = "codescope-server"
version = "0.11.2"
edition = "2021"
description = "Fast codebase indexer and search server — MCP server for Claude Code and standalone web UI"
repository = "https://github.com/AlrikOlson/codescope"
homepage = "https://github.com/AlrikOlson/codescope"
license = "MIT"
authors = ["Alrik Olson"]
keywords = ["codebase", "indexer", "search", "mcp", "code-navigation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "codescope"
path = "src/main.rs"

[features]
default = ["semantic"]
tiktoken = ["dep:tiktoken-rs"]
semantic = ["dep:fastembed", "dep:ort"]
cuda = ["semantic", "fastembed/cuda"]
coreml = ["semantic", "ort/coreml"]
directml = ["semantic", "ort/directml"]
accelerate = ["semantic", "fastembed/accelerate"]
metal = ["semantic", "fastembed/metal"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs", "trace"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"
regex = "1"
rayon = "1.10"
dashmap = "6"
toml = "0.8"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
notify = "7"
uuid = { version = "1", features = ["v4"] }

# Optional tokenizer backends
tiktoken-rs = { version = "0.6", optional = true }

# Optional semantic search dependencies
fastembed = { version = "5", optional = true, default-features = false, features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"] }
ort = { version = "=2.0.0-rc.11", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
