[package]
name = "codescope-server"
version = "0.11.2"
edition = "2021"
description = "Fast codebase indexer and search server — MCP server for Claude Code and standalone web UI"
repository = "https://github.com/AlrikOlson/codescope"
homepage = "https://github.com/AlrikOlson/codescope"
license = "MIT"
authors = ["Alrik Olson"]
keywords = ["codebase", "indexer", "search", "mcp", "code-navigation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "codescope"
path = "src/main.rs"

[features]
default = ["semantic"]
tiktoken = ["codescope-core/tiktoken"]
semantic = ["codescope-core/semantic", "codescope-mcp/semantic", "codescope-http/semantic"]
cuda = ["codescope-core/cuda"]
coreml = ["codescope-core/coreml"]
directml = ["codescope-core/directml"]
accelerate = ["codescope-core/accelerate"]
metal = ["codescope-core/metal"]
treesitter = ["codescope-core/treesitter", "codescope-mcp/treesitter", "codescope-http/treesitter"]

[dependencies]
codescope-core = { path = "../crates/core", default-features = false }
codescope-mcp = { path = "../crates/mcp", default-features = false }
codescope-http = { path = "../crates/http", default-features = false }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs", "trace"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
