[package]
name = "codescope-setup"
version = "0.11.2"
edition = "2021"
description = "CodeScope setup wizard — guided onboarding with native GUI"

[[bin]]
name = "codescope-setup"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
codescope-server = { path = "../server" }

[features]
default = []
cuda = ["codescope-server/cuda"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
