[package]
name = "codescope-setup"
version = "0.11.2"
edition = "2021"
description = "CodeScope setup wizard — guided onboarding with native GUI"

[[bin]]
name = "codescope-setup"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
regex = "1"
rayon = "1.10"
codescope-server = { path = "../server" }

[features]
default = []
semantic = ["codescope-server/semantic"]
cuda = ["codescope-server/cuda"]
accelerate = ["codescope-server/accelerate"]
metal = ["codescope-server/metal"]
coreml = ["codescope-server/coreml"]
directml = ["codescope-server/directml"]
treesitter = ["codescope-server/treesitter"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

