[package]
name = "codescope-core"
version = "0.11.2"
edition = "2021"
description = "Core library for CodeScope — codebase indexing, search, and analysis"
repository = "https://github.com/AlrikOlson/codescope"
license = "MIT"

[features]
default = ["semantic"]
tiktoken = ["dep:tiktoken-rs"]
semantic = ["dep:fastembed", "dep:ort"]
cuda = ["semantic", "fastembed/cuda"]
coreml = ["semantic", "ort/coreml"]
directml = ["semantic", "ort/directml"]
accelerate = ["semantic", "fastembed/accelerate"]
metal = ["semantic", "fastembed/metal"]
treesitter = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-python",
    "dep:tree-sitter-go",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-java",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
ignore = "0.4"
regex = "1"
rayon = "1.10"
dashmap = "6"
toml = "0.8"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
notify = "7"
uuid = { version = "1", features = ["v4"] }

# Optional tokenizer backends
tiktoken-rs = { version = "0.6", optional = true }

# Optional tree-sitter AST parsing
tree-sitter = { version = "0.24", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }

# Optional semantic search dependencies
fastembed = { version = "5", optional = true, default-features = false, features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"] }
ort = { version = "=2.0.0-rc.11", optional = true }

[dev-dependencies]
tempfile = "3"
