[package]
name = "codescope-http"
version = "0.11.2"
edition = "2021"
description = "HTTP API layer for CodeScope web UI"
repository = "https://github.com/AlrikOlson/codescope"
license = "MIT"

[features]
default = ["semantic"]
semantic = ["codescope-core/semantic"]
treesitter = ["codescope-core/treesitter"]

[dependencies]
codescope-core = { path = "../core", default-features = false }
axum = "0.8"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
