[package]
name = "codescope-mcp"
version = "0.11.2"
edition = "2021"
description = "MCP transport layer for CodeScope — stdio and streamable HTTP"
repository = "https://github.com/AlrikOlson/codescope"
license = "MIT"

[features]
default = ["semantic"]
semantic = ["codescope-core/semantic"]
treesitter = ["codescope-core/treesitter"]

[dependencies]
codescope-core = { path = "../core", default-features = false }
axum = "0.8"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
